<resources>
    <string name="app_name">DesafioPractio2</string>
    <string name="welcome">Bienvenido</string>
    <string name="editUser">User</string>
    <string name="editPassword">Password</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Crear cuenta</string>

    <!--activity_crear_cuenta-->

    <string name="textCrearCuenta">Crea tu cuenta</string>
    <string name="editCrearUser">Email</string>
    <string name="editCrearPassword">Password</string>
    <string name="editCrearConfirmarPassword">Confirmar Password</string>
    <string name="textCrearPasswordRequisito">El password debe de ser mayor a 6 caracteres</string>
    <string name="btnCrearRegistrarse">Crear Cuenta</string>

    <!-- activity CrearAlumno -->
    <string name="Promedio_titulo">Promedio De Notas</string>
    <string name="Promedio_lbl_promedio">El promedio es: </string>
    <string name="Promedio_txt_nombre">Nombre del alumno</string>
    <string name="Promedio_txt_nota1">Nota 1</string>
    <string name="Promedio_txt_nota2">Nota 2</string>
    <string name="Promedio_txt_nota3">Nota 3</string>
    <string name="Promedio_txt_nota4">Nota 4</string>
    <string name="Promedio_txt_nota5">Nota 5</string>
    <string name="Promedio_txt_promedio">Promedio</string>
    <string name="Promedio_btn_calcular">Registrar</string>
    <string name="Promedio_btn_editar">Editar</string>
    <string name="Promedio_btn_borrar">Borrar</string>

    <!-- activity editar alumno -->
    <string name="editarAlumno_titulo">Editando usuario</string>


    <!-- activity CrearEmpleado -->
    <string name="Salario_titulo">Salario Neto</string>
    <string name="Salario_txt_nombre">Nombre del trabajador</string>
    <string name="Salario_txt_salarioBase">Salario Base</string>
    <string name="Salario_btn_calcular">Calcular</string>

    <!-- activity EditarEmpleados -->
    <string name="Salario_btn_editar">Editar</string>
    <string name="Salario_btn_eliminar">Eliminar</string>
    <!-- menu -->
    <string name="navPromedio">Promedio</string>
    <string name="navSalario">Salario neto</string>
    <string name="navSalir">Cerrar sesión</string>
</resources>